--- a/Style/style.css
+++ b/Style/style.css
@@ -1,30 +1,32 @@
 
-
-
-
-
 h1{
     font-family: 'Sigmar One', cursive;
 }
 
-
 .parrafos{
-    font-family: 'Cantarell', sans-serif;;
+    font-family: 'Cantarell', sans-serif;
+    font-size: 15pt;
+    text-align: justify;
 }
+
+
 
 #Who-i-am {
-   
+padding: 10px;
+margin-top: 40px;
 }
-#Student-life {
-    
+#Education {
+padding: 10px;
+margin-top: 40px;
 }
 #Hobbies {
-    
+padding: 10px;
+margin-top: 40px;
 }
 #Contact {
-    
+padding: 10px;
+margin-top: 40px;  
 }
-
 
 
 
