--- a/Style/hojavida.css
+++ b/Style/hojavida.css
@@ -1,3 +1,8 @@
+body  {
+  background-image: url("paper.gif");
+  background-color: #cccccc;
+}
+
 table {
     border-collapse: collapse;
     border-spacing: 0;
@@ -18,17 +23,56 @@ table {
     background-color: #f2f2f2
   }
   
-  .fa-check {
+.fa-check {
     color: green;
-  }
+}
   
-  .fa-remove {
+.fa-remove {
     color: red;
-  }
+}
 
-  #Projects .col-sm-6 {
+#Projects .col-sm-6 {
     margin: 0;
     padding: 25px;
+}
+
+h1{
+  font-family: 'Sigmar One', cursive;
+}
+
+
+
+#Knowledge {
+  padding: 10px;
+  margin-top: 40px;
+}
+
+.list-group{
+  font-family: 'Cantarell', sans-serif;
+  font-size: 15pt;
+}
+
+
+#Programming {
+  padding: 10px;
+  margin-top: 40px;
+}
+
+table {
+  font-family: 'Cantarell', sans-serif;
+  font-size: 15pt;
+}
+
+
+#Projects {
+  padding: 10px;
+  margin-top: 40px;
+}
+
+.parrafosp{
+  font-family: 'Cantarell', sans-serif;
+  font-size: 15pt;
+  text-align: justify;
 }
 
 #Projects img {
