--- a/Style/style.css
+++ b/Style/style.css
@@ -9,6 +9,11 @@ h1{
     text-align: justify;
 }
 
+.parrafosHobbie{
+    font-family: 'Coming Soon', cursive;
+    font-size: 15pt;
+    text-align: justify;
+}
 
 
 #Who-i-am {
