--- a/Style/style.css
+++ b/Style/style.css
@@ -49,7 +49,9 @@ margin-top: 40px;
     border: 5px solid #f7f7f7 ;
 }
 
-
+#Education img:hover {
+    border: 5px solid #f7f7f7 ;
+}
 
 body {
     background-image: url("paper.gif");
